
* L16s_v3
* L32s_v3
* L48s_v3
* L64s_v3


link:https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/reference-configs-azure.html["Configurazioni supportate in Azure"^]



== 6 dicembre 2023



=== Cloud Volumes ONTAP 9.14.1 RC1

BlueXP ora può implementare e gestire Cloud Volumes ONTAP 9.14.1 in AWS, Azure e Google Cloud.



== 5 dicembre 2023

Sono state introdotte le seguenti modifiche.



=== Nuovo supporto di regione in Azure



==== Supporto per regione a zona di disponibilità singola

Le seguenti regioni supportano ora implementazioni a zona di disponibilità singola altamente disponibili in Azure per Cloud Volumes ONTAP 9.12.1 GA e versioni successive:

* Tel Aviv
* Milano




==== Supporto di aree di disponibilità multiple

Le seguenti regioni ora supportano implementazioni a più zone di disponibilità altamente disponibili in Azure per Cloud Volumes ONTAP 9.12.1 GA e versioni successive:

* India Centrale
* Norvegia Est
* Svizzera Nord
* Sud Africa, Nord
* Emirati Arabi Uniti Nord
* Cina Nord 3


Per un elenco di tutte le regioni, vedere la https://bluexp.netapp.com/cloud-volumes-global-regions["Mappa delle regioni globali sotto Azure"^].



== 10 novembre 2023

La seguente modifica è stata introdotta con la versione 3.9.35 del connettore.



=== La regione di Berlino ora è supportata in Google Cloud

La regione di Berlino è ora supportata in Google Cloud per Cloud Volumes ONTAP 9.12.1 GA e versioni successive.

Per un elenco di tutte le regioni, vedere la https://bluexp.netapp.com/cloud-volumes-global-regions["Mappa delle regioni globali in Google Cloud"^].



== 8 novembre 2023

La seguente modifica è stata introdotta con la versione 3.9.35 del connettore.



=== La regione di Tel Aviv è ora supportata in AWS

La regione di Tel Aviv è ora supportata in AWS per Cloud Volumes ONTAP 9.12.1 GA e versioni successive.
