@@ -5211,4 +5211,12 @@ Fare riferimento a.<block ref="9394861c48a8d6b1dd64975c2c0558db" category="inlin
   <block id="8f3a7aeceb3049764382da1a82a27238" category="list-text">Abilitare Azure Key Vault utilizzando l'ID client e l'ID tenant salvati dopo la registrazione dell'applicazione:<block ref="5e256216aa762875258d90fbe836b7b2" prefix=" " category="inline-code"></block></block>
   <block id="27546657617543a3f0cd8927c3f369c8" category="admonition">Il<block ref="ee5ecb949ba751e6c3f7b03d02fc2819" prefix=" " category="inline-code"></block> il valore deve utilizzare<block ref="b5fd887d199c5a44249b4fce7085da7f" prefix=" " category="inline-code"></block> formato.</block>
   <block id="b386d04ca3a89226a06701e85f70e33d" category="list-text">Dopo aver attivato con successo il vault delle chiavi di Azure, immettere il<block ref="00c44d3486742ffa7af4a8bfbab4d3d3" prefix=" " category="inline-code"></block> quando richiesto.</block>
+  <block id="055c53a891e1dcea17b9e4c18351c1e5" category="section-title">Limite massimo volume FlexVol 300 TiB</block>
+  <block id="685bad4432f8d3176689b49c31fcdd5f" category="paragraph">Ora puoi creare un volume FlexVol fino alle dimensioni massime di 300 TiB con System Manager e l'interfaccia a riga di comando di ONTAP a partire da Cloud Volumes ONTAP 9.12.1 P2 e 9.13.0 P2 e in BlueXP a partire da Cloud Volumes ONTAP 9.13.1.</block>
+  <block id="6870aed8e6dfc4f093d5b5c6f8a4d81c" category="inline-link-macro">Limiti di storage in AWS</block>
+  <block id="a842d2e15b1126ce2e0e58e48ea17212" category="list-text"><block ref="a842d2e15b1126ce2e0e58e48ea17212" category="inline-link-macro-rx"></block></block>
+  <block id="e622ddac1a96836929babb5b993749ba" category="inline-link-macro">Limiti di storage in Azure</block>
+  <block id="37da66fa8b940c6b66bd42740840f9cd" category="list-text"><block ref="37da66fa8b940c6b66bd42740840f9cd" category="inline-link-macro-rx"></block></block>
+  <block id="c73908091fadeb9dec16abab42821644" category="inline-link-macro">Limiti di storage in Google Cloud</block>
+  <block id="cf7df70a21568dc1f0d90f876bcb89a1" category="list-text"><block ref="cf7df70a21568dc1f0d90f876bcb89a1" category="inline-link-macro-rx"></block></block>
 </blocks>
